<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/IvCat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F7F7F7"
    tools:context=".Main">

    <TextView
        android:id="@+id/TvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3498DB"
        android:textAlignment="center"
        android:textSize="36sp"
        android:padding="8dp"
        android:text="@string/TvWelcome"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnAge"
        android:backgroundTint="#27AE60"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAge"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/btnBuy"
        android:backgroundTint="#27AE60"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBuy"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/btnTest"
        android:backgroundTint="#27AE60"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTest"
        android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/btnIMC"
        android:backgroundTint="#27AE60"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIMC"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDevelop"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
