<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="80sp"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:textAlignment="center"
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="44sp"
        android:text="@string/TvTitleBuy" />

    <EditText
        android:layout_marginTop="40sp"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:textAlignment="center"
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etName"
        android:textSize="24sp"
        android:inputType="text"
        android:minHeight="48dp" />
    <EditText
        android:layout_marginTop="40sp"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:textAlignment="center"
        android:id="@+id/etLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etLast"
        android:textSize="24sp"
        android:inputType="text"
        android:minHeight="48dp" />
    <EditText
        android:layout_marginTop="40sp"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:textAlignment="center"
        android:id="@+id/etAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etAddress"
        android:textSize="24sp"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:layout_marginTop="20sp"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:id="@+id/btnRegister"
        android:backgroundTint="@color/green1"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Developed by Cristian Guasca"
        android:textSize="14sp"
        android:textColor="#777777"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />
</LinearLayout>